// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultNavbarDropdown renders with route 1`] = `
<div
  className="MuiBox-root css-111f5ru"
  routes={
    [
      {
        "icon": <Memo />,
        "label": "Navbar",
        "name": "Github",
        "route": "/default",
      },
    ]
  }
>
  <p
    className="MuiTypography-root MuiTypography-body2 css-incl6n-MuiTypography-root"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-eimhud-MuiSvgIcon-root"
      data-testid="FacebookIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M5 3h14a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2m13 2h-2.5A3.5 3.5 0 0 0 12 8.5V11h-2v3h2v7h3v-7h3v-3h-3V9a1 1 0 0 1 1-1h2V5z"
      />
    </svg>
  </p>
  <span
    className="MuiTypography-root MuiTypography-button css-ny1wgu-MuiTypography-root"
  >
    Routed Navbar
  </span>
  <p
    className="MuiTypography-root MuiTypography-body2 css-wnhb9o-MuiTypography-root"
  >
    <span
      aria-hidden={true}
      className="material-icons-round notranslate MuiIcon-root MuiIcon-fontSizeInherit css-x5zaln-MuiIcon-root"
    />
  </p>
</div>
`;

exports[`DefaultNavbarDropdown renders without route 1`] = `
<div
  className="MuiBox-root css-111f5ru"
  routes={
    [
      {
        "icon": <Memo />,
        "label": "Regular",
        "name": "Github",
      },
    ]
  }
>
  <p
    className="MuiTypography-root MuiTypography-body2 css-incl6n-MuiTypography-root"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-eimhud-MuiSvgIcon-root"
      data-testid="FacebookIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M5 3h14a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2m13 2h-2.5A3.5 3.5 0 0 0 12 8.5V11h-2v3h2v7h3v-7h3v-3h-3V9a1 1 0 0 1 1-1h2V5z"
      />
    </svg>
  </p>
  <span
    className="MuiTypography-root MuiTypography-button css-ny1wgu-MuiTypography-root"
  >
    Not Routed Navbar
  </span>
  <p
    className="MuiTypography-root MuiTypography-body2 css-wnhb9o-MuiTypography-root"
  >
    <span
      aria-hidden={true}
      className="material-icons-round notranslate MuiIcon-root MuiIcon-fontSizeInherit css-x5zaln-MuiIcon-root"
    />
  </p>
</div>
`;
